# services-rabbitmq

./: README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/admin/: rabbitmq.py
nagare/services/: rabbitmq.py
src/nagare/admin/: rabbitmq.py
src/nagare/services/: rabbitmq.py
