[metadata]
name = nagare-services-rabbitmq
author = Net-ng
author_email = alain.poirier@net-ng.com
description = RabbitMQ service
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/services-rabbitmq
    Tracker = https://github.com/nagareproject/services-rabbitmq/issues

[options]
zip_safe = False
packages = find:
install_requires =
    futures; python_version == "2.7"
    AMQPStorm
    nagare-services-transaction
    nagare-server

[options.entry_points]
nagare.commands =
    rabbitmq = nagare.admin.rabbitmq:Commands

nagare.commands.rabbitmq =
    receive = nagare.admin.rabbitmq:Receive
    send = nagare.admin.rabbitmq:Send

nagare.services =
    rabbitmq = nagare.services.rabbitmq:RabbitMQ

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
